--- a/package.json
+++ b/package.json
@@ -21,18 +21,20 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "lodash": "^4.17.20",
     "nuxt": "^2.14.7"
   },
   "devDependencies": {
-    "@nuxt/typescript-runtime": "^2.0.0",
-    "@nuxtjs/axios": "^5.12.2",
-    "@nuxtjs/pwa": "^3.2.2",
     "@nuxt/types": "^2.14.7",
     "@nuxt/typescript-build": "^2.0.3",
+    "@nuxt/typescript-runtime": "^2.0.0",
+    "@nuxtjs/axios": "^5.12.2",
     "@nuxtjs/eslint-config": "^3.1.0",
     "@nuxtjs/eslint-config-typescript": "^3.0.0",
     "@nuxtjs/eslint-module": "^3.0.0",
+    "@nuxtjs/pwa": "^3.2.2",
     "@nuxtjs/tailwindcss": "^3.1.0",
+    "@types/lodash": "^4.14.162",
     "@vue/test-utils": "^1.1.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
